--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ libsass==0.20.1
 pygments~=2.6.1
 pygments-csv-lexer~=0.1
 sphinx==5
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-serializinghtml==1.1.5
-sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-serializinghtml
+sphinxcontrib-qthelp
 sphinx-tabs==3.4.5  # Compatibility with docutils==0.17.0
